src/test/ui/proc-macro/proc-macro-attributes.stderr
error: cannot find attribute macro `C` in this scope
  --> $DIR/proc-macro-attributes.rs:7:3
   |
LL | #[C]
   |   ^ help: a derive helper attribute with a similar name exists: `B`

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:6:3
   |
LL | #[B]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:8:3
   |
LL | #[B(D)]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:9:3
   |
LL | #[B(E = "foo")]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:10:3
   |
LL | #[B(arbitrary tokens)]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0659`.
